Fix bug in bus stop view layout

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
             android:name=".BusView" />
         <activity
             android:name=".BusStopView"
-            android:label="@string/busstoplist_selectstop">
-            <intent-filter>
+            android:label="@string/app_name">
+	    <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
